snapshots/tests/project/vb6_code/transparency_2d_project_load.snap
---
source: vb6parse/tests/project/vb6_code.rs
expression: project
---
project_type: Exe
references:
  - uuid: 00020430-0000-0000-c000-000000000046
    unknown1: "2.0"
    unknown2: "0"
    path: "..\\..\\..\\Windows\\SysWOW64\\stdole2.tlb"
    description: OLE Automation
objects:
  - uuid: f9043c88-f6f2-101a-a3c9-08002b2f49fb
    version: "1.2"
    unknown1: "0"
    file_name: COMDLG32.OCX
modules: []
classes:
  - name: FastDrawing
    path: FastDrawing.cls
related_documents: []
property_pages: []
designers: []
forms:
  - frmTransparency.frm
user_controls: []
user_documents: []
other_properties:
  MS Transaction Server:
    AutoRefresh: "1"
properties:
  unused_control_info: Remove
  upgrade_controls: Upgrade
  res_file_32_path: ""
  icon_form: frmTransparency
  startup: frmTransparency
  help_file_path: ""
  title: Transparency
  exe_32_file_name: Transparency.exe
  exe_32_compatible: ""
  dll_base_address: 0
  path_32: ""
  command_line_arguments: ""
  name: Realtime_Transparency_Demo
  description: ""
  debug_startup_component: ""
  help_context_id: "0"
  compatibility_mode: NoCompatibility
  version_32_compatibility: ""
  version_info:
    major: 1
    minor: 0
    revision: 13
    auto_increment_revision: 1
    company_name: Tanner Helland Productions
    file_description: ""
    copyright: ""
    trademark: ""
    product_name: ""
    comments: Downloaded from www.tannerhelland.com
  server_support_files: Local
  conditional_compile: ""
  compilation_type:
    NativeCode:
      optimization_type: FavorFastCode
      favor_pentium_pro: "True"
      code_view_debug_info: NotCreated
      aliasing: AssumeNoAliasing
      bounds_check: NoBoundsCheck
      overflow_check: NoOverflowCheck
      floating_point_check: NoFloatingPointErrorCheck
      pentium_fdiv_bug_check: NoPentiumFDivBugCheck
      unrounded_floating_point: Allow
  start_mode: StandAlone
  unattended: Interactive
  retained: UnloadOnExit
  thread_per_object: 0
  threading_model: ApartmentThreaded
  max_number_of_threads: 1
  debug_startup_option: WaitForComponentCreation
  use_existing_browser: Use
